# TUIA_MDD_TP1

./: .gitignore  ConsignaTP1.md  Correcciones.md  TP1-MINERIA_Armas-FerreiraDaCamara-Soda.py  TP1-REHECHO-MINERIA_Armas-FerreiraDaCamara-Soda.py  VERSION_FINAL_TP1.py  correcion2.ipynb  correcion2.py  denuevo.py  pyproject.toml  tp1_corregido.py
